sources/dashboard_csn_front/deployment/int/kube-config/dash_front_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dash-front-service
spec:
  selector:
    app: dash-front
  ports:
    - port: 80
