sources/dashboard_csn_front/deployment/int/kube-config/dash_front_ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: dash-ingress
spec:
  rules:
  - host: dashboard-csn-int.k8s-dev.iamdg.net.ma
    http:
      paths:
      - path: /
        backend:
          serviceName: dash-front-service
          servicePort: 80 
      - path: /dashboard_csn_ms
        backend:
          serviceName: dashboard-csn-service
          servicePort: 8080
